--- a/src/css/features/icons/feather.css
+++ b/src/css/features/icons/feather.css
@@ -1,216 +1,219 @@
 html.btd-on {
     .btd__custom_icons_feather {
         .icon {
-            font-family: 'icons_feather';
+            font-family: 'icons_feather'!important;
+            -webkit-font-smoothing: antialiased!important;
+            -moz-osx-font-smoothing: grayscale!important;
         }
     
         /* Compose tweet/message */
         .icon-compose:before,
         .icon-compose-dm:before {
-            font-family: 'icons_feather';
-            content: '\e867';
+            font-family: 'icons_feather'!important;
+            content: '\e866'!important;
         }
     
         /* Search */
         .icon-search:before {
-            font-family: 'icons_feather';
-            content: '\e8bd';
+            font-family: 'icons_feather'!important;
+            content: '\e8bd'!important;
         }
     
         /* Home */
         .icon-home:before {
-            font-family: 'icons_feather';
-            content: '\e87a';
+            font-family: 'icons_feather'!important;
+            content: '\e87a'!important;
         }
     
         /* Notification Bell */
         .icon-notifications:before {
-            font-family: 'icons_feather';
-            content: '\e836';
+            font-family: 'icons_feather'!important;
+            content: '\e836'!important;
         }
     
         /* Activity */
         .icon-activity:before {
-            font-family: 'icons_feather';
-            content: '\e81d';
+            font-family: 'icons_feather'!important;
+            content: '\e81d'!important;
         }
     
         /* User */
         .icon-user:before,
         .icon-user-dd:before {
-            font-family: 'icons_feather';
-            content: '\e8e9';
+            font-family: 'icons_feather'!important;
+            content: '\e8e9'!important;
         }
     
         /* Users */
         .icon-user-switch:before {
-            font-family: 'icons_feather';
-            content: '\e8ea';
+            font-family: 'icons_feather'!important;
+            content: '\e8ea'!important;
         }
     
         /* Add User */
         .icon-follow:before {
-        font-family: 'icons_feather';
-            content: '\e8e7';
+        font-family: 'icons_feather'!important;
+            content: '\e8e7'!important;
         }
     
         /* Message */
         .icon-message:before {
-            font-family: 'icons_feather';
-            content: '\e891';
+            font-family: 'icons_feather'!important;
+            content: '\e891'!important;
         }
     
         /* Right Chevron */
         .icon-arrow-r-double:before,
         .icon-arrow-r:before {
-            font-family: 'icons_feather';
-            content: '\e844';
+            font-family: 'icons_feather'!important;
+            content: '\e844'!important;
         }
     
         /* Left Chevron */
         .icon-arrow-l-double:before,
         .icon-arrow-l:before {
-            font-family: 'icons_feather';
-            content: '\e843';
+            font-family: 'icons_feather'!important;
+            content: '\e843'!important;
         }
     
         /* Settings */
         .icon-settings:before {
-            font-family: 'icons_feather';
-            content: '\e8c3';
+            font-family: 'icons_feather'!important;
+            content: '\e8c3'!important;
         }
     
         /* Settings Slider */
         .icon-sliders:before {
-            font-family: 'icons_feather';
-            content: '\e89a';
+            font-family: 'icons_feather'!important;
+            content: '\e89a'!important;
         }
     
         /* Add */
         .icon-plus:before {
-            font-family: 'icons_feather';
-            content: '\e8b1';
+            font-family: 'icons_feather'!important;
+            content: '\e8b1'!important;
         }
     
         /* Minus */
         .icon-minus:before {
-            font-family: 'icons_feather';
-            content: '\e897';
+            font-family: 'icons_feather'!important;
+            content: '\e897'!important;
         }
     
         /* X (Close) */
         .icon-close:before {
-            font-family: 'icons_feather';
-            content: '\e8f6';
+            font-family: 'icons_feather'!important;
+            content: '\e8f6'!important;
         }
     
         /* Info */
         .icon-info:before {
-            font-family: 'icons_feather';
-            content: '\e87f';
+            font-family: 'icons_feather'!important;
+            content: '\e87f'!important;
         }
     
         /* Images */
         .icon-image:before {
-            font-family: 'icons_feather';
-            content: '\e87c';
+            font-family: 'icons_feather'!important;
+            content: '\e87c'!important;
         }
     
         /* Camera */
         .icon-camera:before {
-            font-family: 'icons_feather';
-            content: '\e83d';
+            font-family: 'icons_feather'!important;
+            content: '\e83d'!important;
         }
     
         /* Trending */
         .icon-trending:before {
-            font-family: 'icons_feather';
-            content: '\e8dc';
+            font-family: 'icons_feather'!important;
+            content: '\e8dc'!important;
         }
         
         /* Copy | Collections */
         .icon-custom-timeline:before {
-            font-family: 'icons_feather';
-            content: '\e855';
+            font-family: 'icons_feather'!important;
+            content: '\e855'!important;
         }
     
         /* List */
-        .icon-list:before {
-            font-family: 'icons_feather';
-            content: '\e886';
+        .icon-list:before, 
+        .icon-content:before {
+            font-family: 'icons_feather'!important;
+            content: '\e886'!important;
         }
     
         /* Schedule | Clock */
         .icon-schedule:before {
-            font-family: 'icons_feather';
-            content: '\e84d';
+            font-family: 'icons_feather'!important;
+            content: '\e84d'!important;
         }
     
         /* Clear | Trash */
         .icon-clear-timeline:before {
-            font-family: 'icons_feather';
-            content: '\e8da';
+            font-family: 'icons_feather'!important;
+            content: '\e8da'!important;
         }
     
         /* Check | Tick */
         .icon-check:before,
         .icon-mark-read:before {
-            font-family: 'icons_feather';
-            content: '\e83f';
+            font-family: 'icons_feather'!important;
+            content: '\e83f'!important;
         }
     
         /* External Link | Open in new tab */
         .icon-popout:before {
-            font-family: 'icons_feather';
-            content: '\e869';
+            font-family: 'icons_feather'!important;
+            content: '\e869'!important;
         }
     
         /* Mention */
         .icon-mention:before {
-            font-family: 'icons_feather';
-            content: '\e830';
+            font-family: 'icons_feather'!important;
+            content: '\e830'!important;
         }
     
         /* Video Play Button */
         .icon-play-video:before {
-            font-family: 'icons_feather';
-            content: '\e8ad';
+            font-family: 'icons_feather'!important;
+            content: '\e8ad'!important;
         }
     
         /* Lock | Protected */
         .icon-protected:before {
-            font-family: 'icons_feather';
-            content: '\e8e4';
+            font-family: 'icons_feather'!important;
+            content: '\e8e4'!important;
         }
     
         /* Share button */
         .icon-share:before {
-            font-family: 'icons_feather';
-            content: '\e8c1';
+            font-family: 'icons_feather'!important;
+            content: '\e8c1'!important;
         }
     
         /* Reply */
         .icon-reply:before {
-            font-family: 'icons_feather';
-            content: '\e85b';
+            font-family: 'icons_feather'!important;
+            content: '\e85a'!important;
         }
     
         /* Retweet */
         .icon-retweet:before {
-            font-family: 'icons_feather';
-            content: '\e8b6';
+            font-family: 'icons_feather'!important;
+            content: '\e8b6'!important;
         }
     
         /* Favourite */
         .icon-favorite:before {
-            font-family: 'icons_feather';
-            content: '\e879';
+            font-family: 'icons_feather'!important;
+            content: '\e879'!important;
         }
     
         /* More - Horizontal */
         .icon-more:before {
-            font-family: 'icons_feather';
-            content: '\e89b';
+            font-family: 'icons_feather'!important;
+            content: '\e89b'!important;
         }
     }
 }
