--- a/src/css/features/icons/feather.css
+++ b/src/css/features/icons/feather.css
@@ -142,6 +142,12 @@ html.btd-on {
             font-family: 'icons_feather'!important;
             content: '\e886'!important;
         }
+
+        /* Twitter bird/logo */
+        .icon-twitter-bird:before {
+            font-family: 'icons_feather'!important;
+            content: '\e8e0'!important;
+        }
     
         /* Schedule | Clock */
         .icon-schedule:before {
