--- a/src/css/index.css
+++ b/src/css/index.css
@@ -155,7 +155,9 @@ html.btd-on {
   }
 
   [data-action-id^="btd-banner"] {
-    background-color: color(black alpha(30%)) !important;
+    background-color: transparent;
+    cursor: pointer;
+    color: white;
   }
 
   .dropdown-menu .typeahead-item,
@@ -259,4 +261,24 @@ html.btd-on {
 
 .js-column-header .column-header-links {
   max-width: none !important;
+}
+
+.js-message-banner:not(.is-hidden) {
+  padding: 6px 0;
+}
+
+.application .app-title .sprite-logo-badge {
+  background-image: url("../icons/icon-48.png");
+  background-size: 24px;
+  background-position: center;
+}
+
+.application .app-title .sprite-logo {
+  width: 100%;
+  left: 0 !important;
+  height: 34px;
+  top: 5px !important;
+  background-size: contain;
+  background-position: center;
+  background-image: url("../img/btd-logo-title.png");
 }
