--- a/src/css/index.css
+++ b/src/css/index.css
@@ -203,10 +203,10 @@ html.btd-on {
   }
 
   .btd__old_replies
-  .js-stream-item:not(.btd-is-retweet)
-  .js-tweet:not(.txt-mute)
-  .thread
-  ~ .tweet-body,
+    .js-stream-item:not(.btd-is-retweet)
+    .js-tweet:not(.txt-mute)
+    .thread
+    ~ .tweet-body,
   .btd__old_replies .js-stream-item .quoted-tweet {
     .other-replies::before {
       display: none;
@@ -214,9 +214,9 @@ html.btd-on {
   }
 
   .btd__old_replies
-  .js-stream-item:not(.btd-is-retweet)
-  .js-tweet:not(.txt-mute)
-  .tweet-body {
+    .js-stream-item:not(.btd-is-retweet)
+    .js-tweet:not(.txt-mute)
+    .tweet-body {
     .other-replies {
       font-size: 0;
       height: 0;
@@ -267,18 +267,20 @@ html.btd-on {
   padding: 6px 0;
 }
 
-.application .app-title .sprite-logo-badge {
-  background-image: url("../icons/icon-48.png");
-  background-size: 24px;
-  background-position: center;
-}
+.btd__replace_logo {
+  .application .app-title .sprite-logo-badge {
+    background-image: url("../icons/icon-48.png");
+    background-size: 24px;
+    background-position: center;
+  }
 
-.application .app-title .sprite-logo {
-  width: 100%;
-  left: 0 !important;
-  height: 34px;
-  top: 5px !important;
-  background-size: contain;
-  background-position: center;
-  background-image: url("../img/btd-logo-title.png");
+  .application .app-title .sprite-logo {
+    width: 100%;
+    left: 0 !important;
+    height: 34px;
+    top: 5px !important;
+    background-size: contain;
+    background-position: center;
+    background-image: url("../img/btd-logo-title.png");
+  }
 }
