:art: fix audiomack embed alignment

--- a/src/css/embeds.css
+++ b/src/css/embeds.css
@@ -54,6 +54,7 @@ html.btd-on {
   [data-btd-provider="gyazo"],
   [data-btd-provider="bandcamp"],
   [data-btd-provider="ted"],
+  [data-btd-provider="audiomack"],
   [data-btd-provider="vimeo"],
   [data-btd-provider="dailymotion"],
   [data-btd-provider="youtube"],
