--- a/src/css/index.css
+++ b/src/css/index.css
@@ -333,3 +333,9 @@ html:not(.dark) .scroll-styled-h,
 html:not(.dark) .scroll-styled-v {
   scrollbar-color: #e1e8ed transparent;
 }
+
+/* Tigther margins on tweet actions */
+
+.tweet-action-item.pull-left.margin-r--10 {
+  margin-right: 7px !important;
+}
