:sparkles: Added custom icon support

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -10,6 +10,7 @@
 @import "./features/bigger-emojis.css";
 @import "./features/character-count.css";
 @import "./features/collapse-dms.css";
+@import "./features/custom-icons.css";
 @import "./features/flash-tweets.css";
 @import "./features/gray-notif-icns.css";
 @import "./features/hide-context.css";
